Float collapse fix
Float collapse fix with clearfix

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,20 @@ a {
 		margin: 0 auto;
 	}
 
+	.main-nav {
+		float: right;
+	}
+
+	.main-nav li {
+		float: left;
+		margin-left: 12px;
+	}
+
+
+	.name {
+		float: left;
+	}
+
 	.feat-img {
 		width: 300px;
 		float: left;
@@ -110,5 +124,11 @@ a {
 		padding: 10px;
 		border: solid 1px #d9e4ea;
 		border-radius: 5px;
+	}
+
+	.clearfix::after {
+		content: "";
+		display: table;
+		clear: both;
 	}
 }
